--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
           // Signed up successfully
           console.log('User signed up successfully:', userCredential.user);
           // Redirect user to the success page with the beta key
-          window.location.href = 'success.html?BETAKEY';
+          window.location.href = 'success.BETAKEY.html';
         })
         .catch((error) => {
           // Handle errors
