--- a/BETAKEY.html
+++ b/BETAKEY.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Here is your beta key.</h1>
+    <h1>Here is your beta key</h1>
     <h3>Do not share this key! This is your private key: <span style="color: #ff5722;">EEu63Gf</span>.</h3>
   </div>
 </body>
