--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </div>
     <div>
       <a href="signup.html" class="cta-button" target="_blank">Get Started</a>
+      <a href="login.html" class="cta-button" target="_blank">Login</a> <!-- Added login button -->
     </div>
   </div>
 </body>
